src/components/Footer/style.css
.Footer ul{
    list-style-type: none;
}

.Footer a:hover{
    text-decoration: underline 2px;
}

.Footer{
    width: 100vw;
    padding: 1em;
    text-transform: uppercase;
    font-weight: bold;
}

.Footer>div{
    border-top: 1px solid #ccc;
}

.reach-out-to-us,
.footer-nav{
    padding: 3em;
}

.reach-out-to-us-message{
    margin-bottom: 2em;
}


.footer-nav li{
    margin: 0.5em;
}

.footer-contact-icons>ul{
    display: flex;
    justify-content: space-evenly;
    font-size: 1.5em;
}

.footer-contact-icons>ul>li{
    margin: 0 0.5em;
    padding: 0.5em;
    border-radius: 15%;
    transition: 0.5s;
}

.footer-contact-icons>ul>li:hover{
    background-color: rgba(128,128,128, 0.5);
}

.copyright-contact-love{
    display: flex;
    flex-wrap: wrap;
    justify-content: space-between;
    align-items: center;
    text-align: center;
    padding: 1.5em 0;
}

.copyright-contact-love>div{
    flex: max-content 1;
    margin: 1em 0;
}

@media screen and (min-width: 600px){
    .Footer{
	display: grid;
	grid-template-columns: 2fr 1fr;
    }
    .footer-nav{
	text-align: right;
	border-left: 1px solid #ccc;
    }
    .copyright-contact-love{
	grid-column: 1 / 3;
    }
    
}

